new website setup

--- a/misc/_posts/2018-01-18-about.md
+++ b/misc/_posts/2018-01-18-about.md
@@ -13,53 +13,16 @@ tags: []
 # Contact
 
 ## Mailing Address
-Lab: Waddington 2.18 <br/>
-University of Edinburgh <br/>
-Max Born Crescent <br/>
-King's Buildings <br/>
-Edinburgh EH9 3BF
+Stephen Doyle <br/>
+Wellcome Sanger Institute <br/>
+Wellcome Genome Campus <br/>
+Hinxton CB10 1SA
 
-On the [map], Waddington is entered through the Rutherford building.
-
-[map]: https://www.google.co.uk/maps/place/C.H.+Waddington+Building,+The+University+of+Edinburgh/@55.9216313,-3.1723127,17z/data=!3m1!4b1!4m5!3m4!1s0x4887b89e8acf13ab:0xa67386c0f0ce3b2d!8m2!3d55.9216283!4d-3.170124
-
-Office: Waddington 3.05 <br/>
-Telephone: +44 (0)131 651 3348
 
 <a name="join"></a>
 
 # Join
 
-If you are excited to probe cellular responses with a mixture of experimental and computational techniques, come work with us! 
-
-We welcome specific enquiries from potential PhD students, masters' students, and from visiting scientists including ERASMUS.
-
-We welcome specific enquiries from prospective Postdocs interested in applying for fellowships to work with us: send an email describing your interests in this lab, and attach a CV. 
-
-What do we mean by "specific enquiries"? Unfortunately, labs get so many spam-like generic emails about PhD places that these emails get deleted immediately. Instead, show that you have interest in our specific work, on RNA processing and environmental responses in fungi. The ideal "specific enquiry" email would reference a specific paper we have published, and make some suggestions as to what you want to do next in response. Those emails get thoughtful replies - just show that you've put in some thought in writing to us! As part of our commitment to diversity, we will take particular care to respond to students from underserved populations.
-
-For more, read these pieces of good advice on how to contact potential PhD supervisors: 
-
-* [findaphd](https://www.findaphd.com/advice/finding/contacting-phd-supervisors.aspx)
-* [theprofessorisin](http://theprofessorisin.com/2011/07/25/how-to-write-an-email-to-a-potential-ph-d-advisor/)
-
-
 # [Links to Funders and Collaborators](/links.html)
 
 # Design and Implementation
-
-I was inspired by, and built from, [The Drummond Lab](http://drummondlab.org/about.html) website. This in turn was built from a design from [Trevor Bedford]( http://bedford.io/team/trevor-bedford/).
-
-The site's source code is freely available on [GitHub]. All code is placed under the MIT license.
-
-[Trevor Bedford]: http://bedford.io/team/trevor-bedford/
-[1]: http://bedford.io
-[public]: http://bedford.io/misc/about/
-[Jekyll Bootstrap]: http://jekyllbootstrap.com
-[GitHub Pages]: https://pages.github.com/
-[GitHub]: http://github.com/
-[Less]: http://lesscss.org/
-[Sass]: http://sass-lang.com/
-[Google Fonts]: http://www.google.com/fonts
-[Open Sans]: https://www.google.com/fonts/specimen/Open+Sans
-
