--- a/misc/_posts/2021-04-30-home.md
+++ b/misc/_posts/2021-04-30-home.md
@@ -1,16 +1,11 @@
 ---
 layout: default
-title: The Wallace Lab
+title: The Doyle Lab
 categories:
  - home
 homepage: true
 ---
 
-*Image credit: [Tom Humberstone](https://www.tomhumberstone.com/)*
-
 <br>
 
-**We study how organisms respond to their environment, focusing on molecular mechanisms used by fungi. We collect and analyze genome-scale datasets to understand how fungi dynamically reorganize their RNA and protein to adapt to environmental change. This includes how fungi adapt to infect human hosts.**
-
-
-Disambiguation: *This is the [Edward Wallace](/team/edward-wallace) Lab studying RNA and Systems Biology in Fungi. It is not to be confused with [the Stephen Wallace Lab studying Chemical and Synthetic Biology](http://wallacelab.bio.ed.ac.uk/), also in Edinburgh.*
+**We study helminths of human and veterinary importance**
