update paper pics

--- a/papers/_posts/2018-11-05-50HGI.md
+++ b/papers/_posts/2018-11-05-50HGI.md
@@ -9,7 +9,7 @@ volume:
 issue: 
 pages: 
 authors: "International Helminth Genomes Consortium"
-image: 
+image: /assets/images/papers/2018-11-05-50HGI.png
 redirect_from: 
 fulltext: https://www.nature.com/articles/s41588-018-0262-1
 pdflink: 
