--- a/projects/_posts/2021-10-17-home.md
+++ b/projects/_posts/2021-10-17-home.md
@@ -7,10 +7,55 @@ homepage: true
 ---
 
 
-**We study the genetic diversty of helminths of human and veterinary importance. We generate and analyse population-wide to single-cell resolution genomic datasets to understand the genetic basis for the evolutionary success and future potential of parasitic worms.**
+**We study the genetic diversty of helminths of human and veterinary importance. We generate and analyse population-wide to single-cell resolution 
+genomic datasets to understand the genetic basis for the evolutionary success and future potential of parasitic worms.**
 
-Helminths, commonly called parasitic worms, are a group of organisms that exploit an incredibly diverse range of hosts and life history strategies for their persistence across generations. Helminth infections of humans and animals of veterinary importance, such as companion and food-producing animals, are responsible for a significant disease burden in their hosts that causes pain, disability, developmental delay, and in some cases, death around the world. Worldwide, over 1.5 billion people and countless animals are infected with one or more helminth species at any given time. As such, human helminth infections are the target of large-scale mass drug administration campaigns, and in veterinary settings, hundreds of millions of animals are treated with anthelmintic drugs to prevent and/or cure infections. The importance of anthelmintics to treat helminth infections cannot be understated; the discovery and development of ivermectin as an anthelmintic was recognised by a Nobel Prize in Physiology or Medicine in 2015.
+**Background**
+Helminths, commonly called parasitic worms, are a group of organisms that exploit an incredibly diverse range of hosts and life history strategies 
+for their persistence across generations. Helminth infections of humans and animals of veterinary importance, such as companion and food-producing 
+animals, are responsible for a significant disease burden in their hosts that causes pain, disability, developmental delay, and in some cases, death 
+around the world. Worldwide, over 1.5 billion people and countless animals are infected with one or more helminth species at any given time. As such, 
+human helminth infections are the target of large-scale mass drug administration campaigns, and in veterinary settings, hundreds of millions of animals 
+are treated with anthelmintic drugs to prevent and/or cure infections. The importance of anthelmintics to control helminth infections cannot be understated.
 
-The ability of helminths to survive and adapt within or outside their hosts lies in their capacity to generate and maintain significant genetic novelty upon which selection can act, which in turn determines their adaptive potential. Two examples clearly illustrate this adaptive potential: (i) the ability of helminths to parasitise single or multiple host species has arisen from free-living ancestors independently many times throughout their evolutionary history, with different species of helminth exploiting distinct mechanisms to invade and establish in their host, and (ii) widespread and frequent use of anthelmintic drugs to control parasites has rapidly selected for drug-resistant parasites. Only three classes of broad- spectrum anthelmintics are available; in veterinary animals (and particularly in livestock), resistance to all of classes including to multiple classes simultaneously has been documented in many helminths species throughout the world, in as little as a few years after introduction of the drug. In humans, there are increasing concerns that reduced efficacy of these same drugs is evidence of emerging resistance, which threatens to reverse gains from up to 30 years of successful treatment and parasite control. The genetic basis for this adaptation is, however, poorly understood. This major gap in our knowledge, largely due to the high genetic diversity and experimental intractability of most helminth species, limits our ability to understand these processes, which need to be overcome to successfully treat disease and predict outcomes of long-term control programmes.
+The ability of helminths to survive and adapt within or outside their hosts lies in their capacity to generate and maintain significant genetic novelty 
+upon which selection can act, which in turn determines their adaptive potential. Two examples clearly illustrate this adaptive potential: (i) the ability 
+of helminths to parasitise single or multiple host species has arisen from free-living ancestors independently many times throughout their evolutionary 
+history, with different species of helminth exploiting distinct mechanisms to invade and establish in their host, and (ii) widespread and frequent use 
+of anthelmintic drugs to control parasites has rapidly selected for drug-resistant parasites. Only three classes of broad- spectrum anthelmintics are 
+available; in veterinary animals (and particularly in livestock), resistance to all of classes including to multiple classes simultaneously has been 
+documented in many helminths species throughout the world, in as little as a few years after introduction of the drug. In humans, there are increasing 
+concerns that reduced efficacy of these same drugs is evidence of emerging resistance, which threatens to reverse gains from up to 30 years of successful 
+treatment and parasite control. **The genetic basis for adaptation by helminths is, however, poorly understood.** This major gap in our knowledge, largely 
+due to the high genetic diversity and experimental intractability of most helminth species, limits our ability to understand these processes, which need to 
+be overcome to successfully treat disease and predict outcomes of long-term control programmes.
 
-Our work aims to identify the genetic mechanisms underpinning parasite adaptation. To do so, we primarily focus on the impact drug selection using ivermectin, a vitally important drug in human and animal health, has on the genetic diversity of Haemonchus contortus, a major economically important gastrointestinal parasite of livestock worldwide and a genetically tractable model used for drug discovery, vaccine development, and anthelmintic resistance research. We exploit genetic crosses between susceptible and ivermectin resistant H. contortus strains to control genetic diversity, together with high-throughput population and single-cell genomic approaches to sample genetic diversity over a multi-year evolution experiment, our research will dissect the interaction between genetic and phenotypic variation, and the impact that selection has on shaping this variation. Further, these data will show their potential for future adaptation, and identify evolutionary constraints that may be exploited for novel control interventions. More broadly, these data will inform practices to improve the health and welfare of animals exposed to parasites like H. contortus, and provide a novel experimental and theoretical framework toward understanding the adaptive potential of genetically intractable helminth species of human and veterinary medical importance.
+**Our work aims to identify the genetic mechanisms underpinning parasite adaptation.** 
+
+To address this aim, our research is focused on three broad research themes:
+(1) *Building high-quality genomic resources to understand the evolutionary history between organisms*, for example:
+- *Haemonchus contortus* chromosomal genome assembly and annotation [Paper](https://doi.org/10.1101/2020.02.18.945246) [GitHub](https://github.com/stephenrdoyle/hcontortus_genome) [WormBase Parasite](https://parasite.wormbase.org/Haemonchus_contortus_prjeb506/Info/Index/)
+- Comparative genomics of the major parasitic worms - the 50 Helminths Genomes Project; [Paper](https://doi.org/10.1038/s41588-018-0262-1)
+- Genome of *Onchocerca volvulus*, the causative agent of human River Blindness; [Paper](http://doi:10.1038/nmicrobiol.2016.216) 
+
+(2) *Defining genetic relationships within species at both local and global scales*, for example:
+* Global diversity of *Haemonchus contortus* ; [Paper](https://doi.org/10.1038/s41467-019-12695-4)
+* Genetic map and familial relationships among a brood of *Haemonchus contortus* ; [Paper](https://doi.org/10.1093/gbe/evx269) [GitHub]()
+* Transmission of Guinea worm within and between populations of human and dogs; [Paper](https://doi.org/10.1101/808923)
+
+(3) *Understanding genome-wide variation to map genes associated with traits of interest*, for example:
+* Genetic response by the human pathogen *Onchocerca volvulus* to ivermectin mass drug administration; [Paper](https://doi.org/10.1186/s13071-016-1832-7) [GitHub](https://github.com/stephenrdoyle/ovolvulus_ivermectin_genomics)
+* Identification of major genetic locus linked to ivermectin resistance in *Haemonchus contortus* ; [Paper](https://doi.org/10.1186/s12864-019-5592-6) [GitHub]()
+* Using genomics to understand anthelmintic resistance; [Paper](https://doi.org/10.1016/j.pt.2019.01.004)
+
+
+**UKRI Future Leaders Fellowship**
+Stephen's Fellowship is primarily focused on the impact drug selection using ivermectin, a vitally important drug in human and animal health, has on the genetic diversity 
+of *Haemonchus contortus*, a major economically important gastrointestinal parasite of livestock worldwide and a genetically tractable model used for drug discovery, 
+vaccine development, and anthelmintic resistance research. We exploit genetic crosses between susceptible and ivermectin resistant *H. contortus* strains to control 
+genetic diversity, together with high-throughput population and single-cell genomic approaches, to measure change in genetic diversity over a multi-year evolution experiment.
+
+Our research will dissect the interaction between genetic and phenotypic variation, and the impact that selection has on shaping this variation. Further, these 
+data will show their potential for future adaptation, and identify evolutionary constraints that may be exploited for novel control interventions. More broadly, 
+these data will inform practices to improve the health and welfare of animals exposed to parasites like *H. contortus*, and provide a novel experimental and 
+theoretical framework toward understanding the adaptive potential of genetically intractable helminth species of human and veterinary medical importance.
