update research aims

--- a/projects/_posts/2021-10-17-home.md
+++ b/projects/_posts/2021-10-17-home.md
@@ -19,20 +19,23 @@ human helminth infections are the target of large-scale mass drug administration
 are treated with anthelmintic drugs to prevent and/or cure infections. The importance of anthelmintics to control helminth infections cannot be understated.
 
 The ability of helminths to survive and adapt within or outside their hosts lies in their capacity to generate and maintain significant genetic novelty 
-upon which selection can act, which in turn determines their adaptive potential. Two examples clearly illustrate this adaptive potential: (i) the ability 
-of helminths to parasitise single or multiple host species has arisen from free-living ancestors independently many times throughout their evolutionary 
-history, with different species of helminth exploiting distinct mechanisms to invade and establish in their host, and (ii) widespread and frequent use 
-of anthelmintic drugs to control parasites has rapidly selected for drug-resistant parasites. Only three classes of broad- spectrum anthelmintics are 
+upon which selection can act, which in turn determines their adaptive potential. Two examples clearly illustrate this adaptive potential: 
+
+(i) the ability of helminths to parasitise single or multiple host species has arisen from free-living ancestors independently many times throughout their evolutionary 
+history, with different species of helminth exploiting distinct mechanisms to invade and establish in their host, and 
+(ii) widespread and frequent use of anthelmintic drugs to control parasites has rapidly selected for drug-resistant parasites. 
+
+Only three classes of broad- spectrum anthelmintics are 
 available; in veterinary animals (and particularly in livestock), resistance to all of classes including to multiple classes simultaneously has been 
 documented in many helminths species throughout the world, in as little as a few years after introduction of the drug. In humans, there are increasing 
 concerns that reduced efficacy of these same drugs is evidence of emerging resistance, which threatens to reverse gains from up to 30 years of successful 
-treatment and parasite control. **The genetic basis for adaptation by helminths is, however, poorly understood.** This major gap in our knowledge, largely 
+treatment and parasite control. 
+
+**The genetic basis for adaptation by helminths is, however, poorly understood.** This major gap in our knowledge, largely 
 due to the high genetic diversity and experimental intractability of most helminth species, limits our ability to understand these processes, which need to 
 be overcome to successfully treat disease and predict outcomes of long-term control programmes.
 
-**Our work aims to identify the genetic mechanisms underpinning parasite adaptation.** 
-
-To address this aim, our research is focused on three broad research themes:
+**Our work aims to identify the genetic mechanisms underpinning parasite adaptation.** To address this aim, our research is focused on three broad research themes:
 
 (1) *Building high-quality genomic resources to understand the evolutionary history between organisms*, for example:
 - *Haemonchus contortus* chromosomal genome assembly and annotation [Paper](https://doi.org/10.1101/2020.02.18.945246) [GitHub](https://github.com/stephenrdoyle/hcontortus_genome) [WormBase Parasite](https://parasite.wormbase.org/Haemonchus_contortus_prjeb506/Info/Index/)
