--- a/projects/_posts/2021-10-17-home.md
+++ b/projects/_posts/2021-10-17-home.md
@@ -22,7 +22,7 @@ The ability of helminths to survive and adapt within or outside their hosts lies
 upon which selection can act, which in turn determines their adaptive potential. Two examples clearly illustrate this adaptive potential: 
 
 (i) the ability of helminths to parasitise single or multiple host species has arisen from free-living ancestors independently many times throughout their evolutionary 
-history, with different species of helminth exploiting distinct mechanisms to invade and establish in their host, and 
+history, with different species of helminth exploiting distinct mechanisms to invade and establish in their host, and  
 (ii) widespread and frequent use of anthelmintic drugs to control parasites has rapidly selected for drug-resistant parasites. 
 
 Only three classes of broad- spectrum anthelmintics are 
@@ -37,7 +37,7 @@ be overcome to successfully treat disease and predict outcomes of long-term cont
 
 **Our work aims to identify the genetic mechanisms underpinning parasite adaptation.** To address this aim, our research is focused on three broad research themes:
 
-(1) *Building high-quality genomic resources to understand the evolutionary history between organisms*, for example:
+(1) *Building high-quality, open-access genomic resources to understand the evolutionary history between organisms*, for example:
 - *Haemonchus contortus* chromosomal genome assembly and annotation [Paper](https://doi.org/10.1101/2020.02.18.945246) [GitHub](https://github.com/stephenrdoyle/hcontortus_genome) [WormBase Parasite](https://parasite.wormbase.org/Haemonchus_contortus_prjeb506/Info/Index/)
 - Comparative genomics of the major parasitic worms - the 50 Helminths Genomes Project; [Paper](https://doi.org/10.1038/s41588-018-0262-1)
 - Genome of *Onchocerca volvulus*, the causative agent of human River Blindness; [Paper](http://doi:10.1038/nmicrobiol.2016.216) 
