--- a/misc/_posts/2021-10-17-links.md
+++ b/misc/_posts/2021-10-17-links.md
@@ -22,4 +22,19 @@ tags: []
 
 # Scientific Collaborators
 
+*In the UK*
+- [Matt Berriman](https://www.sanger.ac.uk/person/berriman-matt/), Wellcome Sanger Institute
+- [James Cotton](https://www.sanger.ac.uk/person/cotton-james/), Wellcome Sanger Institute
+- [Eileen Devaney](https://www.gla.ac.uk/researchinstitutes/bahcm/staff/eileendevaney/), University of Glasgow
+- [Roz Laing](https://www.gla.ac.uk/researchinstitutes/bahcm/staff/rozlaing/), University of Glasgow; [BUG Consortium](https://bugconsortium.wordpress.com/)
+- [Dave Bartley](https://www.moredun.org.uk/people/staff/dr-dave-bartley), Moredun Research Institute
+- [Cinzia Cantacessi](https://www.vet.cam.ac.uk/swan/careerpathway/cantacessi), University of Cambridge
 
+*From abroad*
+- [John Gilleard](https://vet.ucalgary.ca/contact-us/john-gilleard), University of Calgary, Canada
+- [Ray Kaplan](https://www.sgu.edu/biography/ray-kaplan/)
+- [Guillaume Salle](https://www6.val-de-loire.inrae.fr/infectiologie-santepublique_eng/Staff-members/Parasitology-scientific-staff/Salle)
+- [Warwick Grant](https://www.latrobe.edu.au/animal-plant-and-soil-sciences/research/nematode-genetics)
+- [Peter Nejsum](https://pure.au.dk/portal/en/persons/peter-lindberg-nejsum(ee468e32-0a8b-4cd3-9473-60335cf27df9).html)
+- [Christian Kapel](https://plen.ku.dk/english/employees/?pure=en/persons/94545)
+- [STOP Consortium](https://stoptheworm.org/consortium/)  
