--- a/misc/_posts/2021-10-17-links.md
+++ b/misc/_posts/2021-10-17-links.md
@@ -32,9 +32,9 @@ tags: []
 
 *From abroad*
 - [John Gilleard](https://vet.ucalgary.ca/contact-us/john-gilleard), University of Calgary, Canada
-- [Ray Kaplan](https://www.sgu.edu/biography/ray-kaplan/)
-- [Guillaume Salle](https://www6.val-de-loire.inrae.fr/infectiologie-santepublique_eng/Staff-members/Parasitology-scientific-staff/Salle)
-- [Warwick Grant](https://www.latrobe.edu.au/animal-plant-and-soil-sciences/research/nematode-genetics)
-- [Peter Nejsum](https://pure.au.dk/portal/en/persons/peter-lindberg-nejsum(ee468e32-0a8b-4cd3-9473-60335cf27df9).html)
-- [Christian Kapel](https://plen.ku.dk/english/employees/?pure=en/persons/94545)
-- [STOP Consortium](https://stoptheworm.org/consortium/)  
+- [Ray Kaplan](https://www.sgu.edu/biography/ray-kaplan/), St. George's University, Grenada
+- [Guillaume Salle](https://www6.val-de-loire.inrae.fr/infectiologie-santepublique_eng/Staff-members/Parasitology-scientific-staff/Salle), INRAE, France
+- [Warwick Grant](https://www.latrobe.edu.au/animal-plant-and-soil-sciences/research/nematode-genetics), La Trobe University, Australia
+- [Peter Nejsum](https://pure.au.dk/portal/en/persons/peter-lindberg-nejsum(ee468e32-0a8b-4cd3-9473-60335cf27df9).html), University of Copenhagen, Denmark
+- [Christian Kapel](https://plen.ku.dk/english/employees/?pure=en/persons/94545), University of Copenhagen, Denmark
+- [STOP Consortium](https://stoptheworm.org/consortium/), ISGlobal, Spain  
