--- a/misc/_posts/2018-01-18-about.md
+++ b/misc/_posts/2018-01-18-about.md
@@ -13,7 +13,8 @@ tags: []
 # Contact
 
 ## Mailing Address
-Stephen Doyle <br/>
+Dr Stephen Doyle <br/>
+Sulston Building, D228
 Wellcome Sanger Institute <br/>
 Wellcome Genome Campus <br/>
 Hinxton CB10 1SA
@@ -23,6 +24,6 @@ Hinxton CB10 1SA
 
 # Join
 
+
 # [Links to Funders and Collaborators](/links.html)
 
-# Design and Implementation
