--- a/misc/_posts/2018-01-18-about.md
+++ b/misc/_posts/2018-01-18-about.md
@@ -14,10 +14,11 @@ tags: []
 
 ## Mailing Address
 Dr Stephen Doyle <br/>
-Sulston Building, D228
+Sulston Building, D228 <br/>
 Wellcome Sanger Institute <br/>
 Wellcome Genome Campus <br/>
-Hinxton CB10 1SA
+Hinxton, Cambridgeshire CB10 1SA <br/>
+United Kingdom
 
 
 <a name="join"></a>
