update research overview

--- a/projects/_posts/2021-10-17-overview.md
+++ b/projects/_posts/2021-10-17-overview.md
@@ -54,12 +54,12 @@ be overcome to successfully treat disease and predict outcomes of long-term cont
 
 
 **UKRI Future Leaders Fellowship**
-Stephen's Fellowship is primarily focused on the impact drug selection using ivermectin, a vitally important drug in human and animal health, has on the genetic diversity 
+Stephen's Fellowship is primarily focused on the impact of drug treatment has on the genetic diversity 
 of *Haemonchus contortus*, a major economically important gastrointestinal parasite of livestock worldwide and a genetically tractable model used for drug discovery, 
-vaccine development, and anthelmintic resistance research. We exploit genetic crosses between susceptible and ivermectin resistant *H. contortus* strains to control 
+vaccine development, and anthelmintic resistance research. We exploit genetic crosses between susceptible and drug-resistant *H. contortus* strains to control 
 genetic diversity, together with high-throughput population and single-cell genomic approaches, to measure change in genetic diversity over a multi-year evolution experiment.
 
-Our research will dissect the interaction between genetic and phenotypic variation, and the impact that selection has on shaping this variation. Further, these 
+Our research aims to dissect the interaction between genetic and phenotypic variation, and the impact that selection has on shaping this variation. Further, these 
 data will show their potential for future adaptation, and identify evolutionary constraints that may be exploited for novel control interventions. More broadly, 
 these data will inform practices to improve the health and welfare of animals exposed to parasites like *H. contortus*, and provide a novel experimental and 
 theoretical framework toward understanding the adaptive potential of genetically intractable helminth species of human and veterinary medical importance.
