update home page

--- a/misc/_posts/2021-10-17-home.md
+++ b/misc/_posts/2021-10-17-home.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Doyle Lab
+title: The Doyle Lab <br> Helminth Genomics @ the Wellcome Sanger Institute
 categories:
  - home
 homepage: true
