update home page

--- a/misc/_posts/2021-10-17-home.md
+++ b/misc/_posts/2021-10-17-home.md
@@ -1,10 +1,11 @@
 ---
 layout: default
-title: The Doyle Lab <br> Helminth Genomics @ the Wellcome Sanger Institute
+title: The Doyle Lab
 categories:
  - home
 homepage: true
 ---
+Helminth Genomics @ the Wellcome Sanger Institute
 
 <br>
 
