update xqtl bz paper

--- a/papers/_posts/2021-12-02-xqtl_bz.md
+++ b/papers/_posts/2021-12-02-xqtl_bz.md
@@ -9,7 +9,7 @@ volume:
 issue:
 pages: 
 authors: "Morrison AA, Chaudhry U, Andrews L, Melville L, Doyle SR, Sargison ND, Bartley DJ"
-image:
+image: /assets/images/papers/2021-12-02-xqtl_bz.png
 redirect_from: 
 fulltext:
 pdflink: 
