--- a/papers/_posts/2022-08-04-lev_as-pcr.md
+++ b/papers/_posts/2022-08-04-lev_as-pcr.md
@@ -8,7 +8,7 @@ journal: "International Journal for Parasitology: Drugs and Drug Resistance"
 volume: 
 issue: 
 pages:
-authors: "Antonopoulos A, DOYLE SR, Bartley DJ, Morrison A, Kaplan R, Howell S, Neveu C, Busin V, Devaney E, Laing R"
+authors: "Antonopoulos A, Doyle SR, Bartley DJ, Morrison A, Kaplan R, Howell S, Neveu C, Busin V, Devaney E, Laing R"
 image: /assets/images/papers/2022-08-04-lev_as-pcr.png
 redirect_from:
 fulltext: https://doi.org/10.1016/j.ijpddr.2022.08.001
