--- a/misc/_posts/2018-01-18-about.md
+++ b/misc/_posts/2018-01-18-about.md
@@ -14,7 +14,7 @@ tags: []
 
 ## Mailing Address
 Dr Stephen Doyle <br/>
-Sulston Building, D228 <br/>
+Sulston Building, E219 <br/>
 Wellcome Sanger Institute <br/>
 Wellcome Genome Campus <br/>
 Hinxton, Cambridgeshire CB10 1SA <br/>
