--- a/misc/_posts/2021-10-17-links.md
+++ b/misc/_posts/2021-10-17-links.md
@@ -19,22 +19,26 @@ tags: []
 
 [UKRI](https://www.ukri.org/)
 
+[EDCTP](https://www.edctp.org/)
+
 
 # Scientific Collaborators
 
 *In the UK*
-- [Matt Berriman](https://www.sanger.ac.uk/person/berriman-matt/), Wellcome Sanger Institute
-- [James Cotton](https://www.sanger.ac.uk/person/cotton-james/), Wellcome Sanger Institute
-- [Eileen Devaney](https://www.gla.ac.uk/researchinstitutes/bahcm/staff/eileendevaney/), University of Glasgow
+- [Matt Berriman](https://www.gla.ac.uk/research/az/wcip/research/researchleaders/berrimangroup/), University of Glasgow
+- [James Cotton](https://www.gla.ac.uk/schools/bohvm/staff/jamescotton/), University of Glasgow
 - [Roz Laing](https://www.gla.ac.uk/researchinstitutes/bahcm/staff/rozlaing/), University of Glasgow; [BUG Consortium](https://bugconsortium.wordpress.com/)
 - [Dave Bartley](https://www.moredun.org.uk/people/staff/dr-dave-bartley), Moredun Research Institute
+- [Neil Sargison](https://www.ed.ac.uk/profile/prof-neil-sargison), University of Edinburgh
 - [Cinzia Cantacessi](https://www.vet.cam.ac.uk/swan/careerpathway/cantacessi), University of Cambridge
+- [Tim Littlewood](https://www.nhm.ac.uk/our-science/departments-and-staff/staff-directory/tim-littlewood.html), Natural History Museum, London
+- [Maria Duque-Correa](https://www.stemcells.cam.ac.uk/people/pi/duque-correa), University of Cambridge
 
 *From abroad*
+- [STOP Consortium](https://stoptheworm.org/consortium/), ISGlobal, Spain  
 - [John Gilleard](https://vet.ucalgary.ca/contact-us/john-gilleard), University of Calgary, Canada
-- [Ray Kaplan](https://www.sgu.edu/biography/ray-kaplan/), St. George's University, Grenada
 - [Guillaume Salle](https://www6.val-de-loire.inrae.fr/infectiologie-santepublique_eng/Staff-members/Parasitology-scientific-staff/Salle), INRAE, France
 - [Warwick Grant](https://www.latrobe.edu.au/animal-plant-and-soil-sciences/research/nematode-genetics), La Trobe University, Australia
 - [Peter Nejsum](https://pure.au.dk/portal/en/persons/peter-lindberg-nejsum(ee468e32-0a8b-4cd3-9473-60335cf27df9).html), University of Copenhagen, Denmark
-- [Christian Kapel](https://plen.ku.dk/english/employees/?pure=en/persons/94545), University of Copenhagen, Denmark
-- [STOP Consortium](https://stoptheworm.org/consortium/), ISGlobal, Spain  
+- [Jan Slapeta](https://www.sydney.edu.au/science/about/our-people/academic-staff/jan-slapeta.html), University of Sydney, Australia
+
